fix: adjust position of return arrow for improved visibility

--- a/assets/css/modules/slideshow.css
+++ b/assets/css/modules/slideshow.css
@@ -149,11 +149,9 @@
     max-width: 300px;
     border-radius: 4px;
     backdrop-filter: blur(5px);
-    /* margin-bottom: 2rem;
-    margin-right: 2rem; */
     position:absolute;
     right: 2vw;
-    bottom: 4vh;
+    bottom: 6vh;
     z-index: 2000;
     width: 40vw;
 }
